--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,8 @@ dependencies = [
     "opencv-python>=4.7.0.68",
     "pillow>=9.4.0",
     "jax[cpu]>=0.4.2",
+    "dm-haiku>=0.0.9",
+    "optax>=0.1.4",
 ]
 requires-python = ">=3.9,<3.12"
 license = {text = "MIT"}
