--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,11 @@ name = "pypi"
 url = "https://pypi.org/simple/"
 verify_ssl = true
 
+[[tool.pdm.source]]
+url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
+name = "cuda"
+type = "find_links"
+
 [tool.pdm]
 includes = ["src"]
 [tool.pdm.dev-dependencies]
@@ -81,6 +86,13 @@ jaxalgo = "jaxalgo.cli:cli"
 repl = [
     "jupyter>=1.0.0",
 ]
+cpu = [
+    "jax[cpu]>=0.4.2",
+]
+gpu = [
+    "jax[cuda]>=0.4.2",
+]
+
 [project]
 name = "jax-algo"
 version = "0"
@@ -92,7 +104,6 @@ dependencies = [
     "click>=8.1.3",
     "opencv-python>=4.7.0.68",
     "pillow>=9.4.0",
-    "jax[cpu]>=0.4.2",
     "dm-haiku>=0.0.9",
     "optax>=0.1.4",
 ]
